--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title></title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width-device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Comapatible" content="ie=edge">
+
+	<link rel="stylesheet" type="text/css" href="styles.css">
+	<script type="text/javascript" defer></script>
+
+	<title>Tic-Tac-Toe</title>
 </head>
 <body>
 
