--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<title>Tic-Tac-Toe</title>
 </head>
 <body>
-	<div class="board x" id="board">
+	<div class="board circle" id="board">
 
 		<div class="cell x" data-cell></div>
 		<div class="cell circle" data-cell></div>
