--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	</div>
 
 	<div class="winning-message" id="winningMessage">
-		<div data-winning-message-text></div>
+		<div data-winning-message-text>X Wins!</div>
 		<button id="restartButton">Restart</button>
 	</div>
 </body>
