--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 	</div>
 
-	<div class="winning-message show" id="winningMessage">
+	<div class="winning-message " id="winningMessage">
 		<div data-winning-message-text>X Wins!</div>
 		<button id="restartButton">Restart</button>
 	</div>
